# cohdl_sim

./: .gitignore  README.md  pyproject.toml  setup.py
cohdl_sim/: _base_proxy_port.py  _base_simulation.py  _generic_proxy_port.py  _proxy_port.py  _simulation.py  _simulation.pyi
cohdl_sim/ghdl_sim/: __init__.py  _build_simulation.py  _proxy_port.py  _simulation.py  _simulation.pyi
cpp/cohdl_sim_ghdl_interface/: ghdl_cohdl_interface.cpp
examples/: 01_simple.py  02_vectors.py  03_sequential.py  04_await_change.py  05_casts.py  06_dynamic_ports.py  07_join_tasks.py  08_axi.py  README.md  _config.py  example_01_simple.py  example_02_vectors.py  example_03_sequential.py  example_04_await_change.py  example_05_casts.py  example_06_dynamic_ports.py  example_07_join_tasks.py  example_08_axi.py  example_09_nested_entities.py  test_examples.py
