[project]
name="cohdl_sim"
authors = [
    { name = "Alexander Forster", email = "alexander.forster123@gmail.com" }
]
description="Simulation support library for CoHDL, based on cocotb"
version="0.1"

[build-system]
requires = ["setuptools", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["examples"]