[project]
name="cohdl_sim"
version="0.2.0"

authors = [
    { name = "Alexander Forster", email = "alexander.forster123@gmail.com" }
]

description="Simulation support library for CoHDL, based on cocotb"
readme = "README.md"
requires-python = ">= 3.10"

dependencies = [
    "cohdl",
    "cocotb",
    "cocotb_test",
]

[build-system]
requires = ["setuptools", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["examples"]

[tool.setuptools.package-data]
"*" = ["*.pyi", "*.hpp"]
